<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen"
    android:padding="16dp"
    tools:context=".NoteDetailsActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_bar_layout"
        android:layout_marginTop="15dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add New Note"
            android:textColor="@color/white1"
            android:textSize="32sp"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/save_note_btn"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_done_24"
            app:tint="@color/white1"
            tools:ignore="TouchTargetSizeCheck" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar_layout"
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_marginVertical="26dp"
        android:backgroundTint="@color/white1"
        android:background="@drawable/rounded_corner">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notes_title_text"
            android:maxLines="1"
            android:maxLength="25"
            android:hint="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="12dp"
            android:layout_marginVertical="8dp"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notes_content_text"
            android:hint="@string/content"
            android:minLines="13"
            android:textSize="20sp"
            android:gravity="top"
            android:textColor="@color/black"
            android:padding="12dp"
            android:layout_marginVertical="5dp"
            android:autofillHints="" />

        <ImageButton
            android:id="@+id/delete_note_text_view_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginTop="4dp"
            android:visibility="gone"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_delete_24"
            android:contentDescription="TODO" />


    </LinearLayout>


</RelativeLayout>